--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <li>pepper jack</li>
         </ul>   
       </li>
-        <li>tbsp of butter</li>          
+      <li>1 tbsp of butter</li>          
     </ul>
      
    <ol>
